--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "react-code-blocks": "^0.1.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^10.1.0",
     "react-query": "^3.39.3",
     "react-syntax-highlighter": "^15.6.1",
     "screenshot-desktop": "^1.15.0",
